# mcocl

./: CMakeLists.txt  README.md  clext.h  clext.py  clinfo-caprara-system.txt  clinfo-caprara.txt  clinfo-hornet-nvidia.txt  clinfo-hornet.txt  clinfo-poutine-amd.txt  clinfo-poutine.txt  clinfo-teuto.txt  compile-caprara-cpp.txt  compile-caprara.txt  compile-hornet.txt  compile-poutine-cpp.txt  kernels.cl  mc.c  mc.cl  mc_ocl.c  mc_ocl.cpp
